--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RentHome</string>
-    <string name="main">RentHome</string>
+    <string name="app_name">HouseRent</string>
+    <string name="main">HouseRent</string>
 
 </resources>
